[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packetz = { version = "2.0.0", features = ["client"]}
text_io = "0.1.12"
tokio = { version = "1.29.1", features = ["full"] }
