[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.8"
packetz = { version = "2.0.0", features = ["server"] }
tokio = { version = "1.29.0", features = ["full"] }
